WEB-545 iPhone 7 | Landscape | After user exits the stream | Game details page | show gameplay settings before launch not aligned properly bug fixed

--- a/src/app/pages/view/view.component.scss
+++ b/src/app/pages/view/view.component.scss
@@ -505,3 +505,9 @@ live {
     opacity:0;  
   }
 }
+
+@media (min-width: 480.1px) {
+  .customResponsiveWidth {
+    width: 100%;
+  }
+}
